# DataFlowAPI

Tech_API/: Dockerfile  compose.yaml  entrypoint.sh  executa_auto.sh  log_cron.txt  pyproject.toml
Tech_API/htmlcov/: class_index.html  function_index.html  index.html  status.json  z_00979664a02cc7a5___init___py.html  z_00979664a02cc7a5_app_py.html  z_00979664a02cc7a5_database_py.html  z_00979664a02cc7a5_models_py.html  z_00979664a02cc7a5_schemas_py.html  z_00979664a02cc7a5_security_py.html  z_00979664a02cc7a5_settings_py.html  z_d3ff59a3bf6f3299_animals_py.html  z_d3ff59a3bf6f3299_auth_py.html  z_d3ff59a3bf6f3299_users_py.html  z_d74b36495dfca9a3_animals_py.html  z_d74b36495dfca9a3_auth_py.html  z_d74b36495dfca9a3_users_py.html
Tech_API/migrations/: env.py
Tech_API/migrations/versions/: 2de6922737ac_create_users_table.py  d7ac022fad9a_update_animais_table.py
Tech_API/tech_api/: app.py  database.py  models.py  schemas.py  security.py  settings.py
Tech_API/tech_api/routers/: animals.py  auth.py  users.py
Tech_API/tests/: conftest.py  test_auth.py  test_db.py  test_security.py  test_users.py
